# python-server-adge

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  STATE.md  aerich.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml
deploy/app/: values-api.yaml  values-worker.yaml
deploy/web/: values-web.yaml
docs/: ARCHITECTURE.md
migrations/models/: 0_20260311155957_init.py
src/: auth.py  config.py  db.py  jobs.py  jobs_schemas.py  main.py  models.py  rate_limit.py  sse.py  storage.py  tasks.py
tests/: conftest.py  test_auth.py  test_health.py  test_jobs.py  test_models.py  test_rate_limit.py  test_readyz_db.py
web/: Dockerfile  nginx.conf.template
web/src/: App.tsx  JobDetailPage.tsx  JobsPage.tsx  SseContext.tsx  api.ts
