[project]
name = "video-demo"
version = "0.1.0"
description = "Video processing demo — FastAPI + Celery + Redis + Postgres + MinIO"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135,<1",
    "uvicorn[standard]>=0.41,<1",
    "pydantic[email]>=2.12,<3",
    "pydantic-settings>=2.13,<3",
    "tortoise-orm[asyncpg]>=1.1,<2",
    "aerich>=0.8,<1",
    "PyJWT>=2.11,<3",
    "argon2-cffi>=25.1,<26",
    "celery[redis]>=5.4,<6",
    "redis>=4.5.5,<6.5",
    "minio>=7.2,<8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15,<1",
    "mypy>=1.19,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.26,<1",
    "httpx>=0.28,<1",
    "testcontainers[postgres,minio]>=4.14,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
python-preference = "managed"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"src/*_schemas.py" = ["TCH003", "TCH001"]
"src/schemas.py" = ["TCH003", "TCH001"]
"src/jobs_schemas.py" = ["TCH003", "TCH001"]
"src/jobs.py" = ["TCH003", "TCH001"]
"src/sse.py" = ["TCH003", "TCH001"]
"src/tasks.py" = ["TCH001"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "minio.*", "redis.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.tasks", "src.sse"]
disallow_untyped_calls = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.aerich]
tortoise_orm = "src.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
